--- a/index.html
+++ b/index.html
@@ -4,35 +4,143 @@
   <title>
     MEJO 487 Project 2 Educational Slider
   </title>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
+
 </head>
 
 <body>
   <div class='container'>
     <div class='single-item'>
-      <div><h3>1</h3>
+
+      <div class='history-slide'>
+
+        <h1>The History of the Potato</h1>
+        <p>
+          Baked or fried, boiled or roasted, as chips or fries. At some point in your life, you've probably eaten a potato. It's delicious, for sure! However, potatoes have played much more a significant role in our history than just that of a
+          dietary staple we have come to know and love today. Without the potato, our modern civilization might not exist at all.
+        </p>
       </div>
-      <div><h3>2</h3>
+
+      <div>
+        <h3>8000 - 5000 BC: Potatoes first domesticated in Peru</h3>
+        <p>
+          Eight thousand years ago in South America, high atop the Andes,
+          ancient Peruvians were the first to cultivate the potato.
+          Containing high proteins and carbohydrates, as well as essential fats, vitamins,
+          and minerals, potatoes were the perfect food source to fuel a large
+          Incan working class as they built and farmed their terraced fields,
+          mined the rocky mountains, and created the sophisticated civilization
+          of the great Incan empire.
+        </p>
       </div>
-      <div><h3>3</h3>
+
+      <div>
+        <h3>1536: Potatoes travel to Europe</h3>
+        <p>
+          But considering how vital they were to the Incan people, when Spanish sailors
+          returning from the Andes first brought potatoes to Europe, the spuds were duds.
+          Europeans simply didn't want to eat what they considered dull and tasteless
+          oddities from a strange new land, too closely related to the deadly
+          nightshade plant, Belladonna, for comfort. Instead of consuming them,
+          they used potatoes as decorative garden plants. More than 200 years would
+          pass before the potato caught on as a major food source in Europe. Though even
+          then, it was predominantly eaten by the lower classes.
+        </p>
       </div>
-      <div><h3>4</h3>
+
+      <div>
+        <h3>1750s: Sprouting empires</h3>
+        <p>
+          European peasants with greater food security no
+          longer found themselves at the mercy of the regularly occuring grain
+          famines of the time, and so their populations steadily grew.
+          As a result, the British, Dutch, and German empires rose on the backs of the
+          growing groups of farmers, laborers, and soldiers, thus lifting the
+          West to its place of world dominian.
+        </p>
       </div>
-      <div><h3>5</h3>
+
+      <div>
+        <h3>1845-1852: Irish Potato Famine</h3>
+        <p>
+          However, not all European countries
+          sprouted empires. After the Irish adopted the potato, their population
+          dramatically increased, as did their dependence on the potato as a major
+          food source. Then, disaster struck. From 1845 to 1852, the potato blight
+          disease ravaged the majority of Irish potato crop, leading to the Irish
+          Potato Famine. Over a million Irish citizens starved to death, and 2 million more left their
+          homes behind.
+        </p>
       </div>
-      <div><h3>6</h3>
+
+      <div>
+        <h3>1850s: Industrial Revolution</h3>
+        <p>
+          This wasn't the end for the potato. The crop eventually
+          recovered, and Europe's population, especially the working classes,
+          continued to increase. Aided by the influx of Irish migrants, Europe
+          now had a large, sustainable, and well-fed population that was capable
+          of manning the emerging factories that would bring about our modern world
+          via the Industrial Revoluation.
+        </p>
       </div>
-      <div><h3>7</h3>
+
+      <div id="slickQuiz">
+        <h3 class="quizName">Quiz</h3>
+        <div class="quizArea">
+          <div class="quizHeader">
+            <!-- where the quiz main copy goes -->
+
+            <a class="button startQuiz" href="#">Get Started!</a>
+          </div>
+
+          <!-- where the quiz gets built -->
+        </div>
+
+        <div class="quizResults">
+          <h3 class="quizScore">You Scored: <span><!-- where the quiz score goes --></span></h3>
+
+          <h3 class="quizLevel"><strong>Ranking:</strong> <span><!-- where the quiz ranking level goes --></span></h3>
+
+          <div class="quizResultsCopy">
+            <!-- where the quiz result copy goes -->
+          </div>
+        </div>
+
+      </div>
+
+      <div class='sources-slide'>
+        <h3>Sources</h3>
+        <ul>
+          <li>
+            https://images.pexels.com/photos/162763/delicious-garnish-potatoes-fried-162763.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
+          </li>
+          <li>
+            https://link.springer.com/article/10.1007/BF00029633
+          </li>
+          <li>
+            https://garden.org/learn/articles/view/559/
+          </li>
+          <li>
+            https://www.smithsonianmag.com/history/how-the-potato-changed-the-world-108470605/
+          </li>
+          <li>
+            https://books.google.com/books?id=MKv3xrAP61wC&printsec=frontcover&dq=history+of+potato&hl=en&sa=X&ved=0ahUKEwiE5I_Zt-_dAhWDu1MKHRzND-EQ6AEIRjAF#v=onepage&q=history%20of%20potato&f=false
+          </li>
+        </ul>
       </div>
 
     </div>
   </div>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  <script src="js/slickQuiz-config.js"></script>
+  <script src="js/slickQuiz.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 
