added quiz questions and answers

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
+  <!-- <link href="css/reset.css" media="screen" rel="stylesheet" type="text/css"> -->
+  <link href="css/slickQuiz.css" media="screen" rel="stylesheet" type="text/css">
+  <!-- <link href="css/master.css" media="screen" rel="stylesheet" type="text/css"> -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
@@ -91,35 +94,22 @@
       </div>
 
       <div id="slickQuiz">
-        <h3 class="quizName">Quiz</h3>
+        <h1 class="quizName"></h1>
         <div class="quizArea">
           <div class="quizHeader">
-            <!-- where the quiz main copy goes -->
-
-            <a class="button startQuiz" href="#">Get Started!</a>
+            <a class="startQuiz" href="">Get Started!</a>
           </div>
-
-          <!-- where the quiz gets built -->
         </div>
-
         <div class="quizResults">
-          <h3 class="quizScore">You Scored: <span><!-- where the quiz score goes --></span></h3>
-
-          <h3 class="quizLevel"><strong>Ranking:</strong> <span><!-- where the quiz ranking level goes --></span></h3>
-
-          <div class="quizResultsCopy">
-            <!-- where the quiz result copy goes -->
-          </div>
+          <h3 class="quizScore">You Scored: <span></span></h3>
+          <h3 class="quizLevel"><strong>Ranking:</strong> <span></span></h3>
+          <div class="quizResultsCopy"></div>
         </div>
-
       </div>
 
       <div class='sources-slide'>
         <h3>Sources</h3>
         <ul>
-          <li>
-            https://images.pexels.com/photos/162763/delicious-garnish-potatoes-fried-162763.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
-          </li>
           <li>
             https://link.springer.com/article/10.1007/BF00029633
           </li>
@@ -127,7 +117,7 @@
             https://garden.org/learn/articles/view/559/
           </li>
           <li>
-            https://www.smithsonianmag.com/history/how-the-potato-changed-the-world-108470605/
+            https://www.washingtonpost.com/history/2018/10/08/christopher-columbus-potato-that-changed-world/?noredirect=on&utm_term=.f4b5fd7954f7
           </li>
           <li>
             https://books.google.com/books?id=MKv3xrAP61wC&printsec=frontcover&dq=history+of+potato&hl=en&sa=X&ved=0ahUKEwiE5I_Zt-_dAhWDu1MKHRzND-EQ6AEIRjAF#v=onepage&q=history%20of%20potato&f=false
@@ -139,9 +129,10 @@
   </div>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-  <script src="js/slickQuiz-config.js"></script>
   <script src="js/slickQuiz.js"></script>
+  <!-- <script src="js/slickQuiz-config.js"></script> -->
   <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
