added tooltip to ireland map

--- a/index.html
+++ b/index.html
@@ -101,11 +101,26 @@
         <img id="man5" src="img/man5.png" alt="person icon" />
         <img id="man6" src="img/man6.png" alt="person icon" /> -->
         <div id="postFamineIrelandLegendIcons">
-          <div id='LegendOver30Icon' class='PopFallLegendSquare'></div>
-          <div id='Legend20to30Icon' class='PopFallLegendSquare'></div>
-          <div id='Legend10to20Icon' class='PopFallLegendSquare'></div>
-          <div id='Legend0to10Icon' class='PopFallLegendSquare'></div>
-          <div id='LegendPopRiseIcon' class='PopFallLegendSquare'></div>
+          <div id='LegendOver30Icon' class='PopFallLegendSquare tooltip'>
+            <span class="tooltiptext">Over 30%</span>
+          </div>
+
+          <div id='Legend20to30Icon' class='PopFallLegendSquare tooltip'>
+            <span class="tooltiptext">20 to 30%</span>
+          </div>
+
+          <div id='Legend10to20Icon' class='PopFallLegendSquare tooltip'>
+            <span class="tooltiptext">10 to 20%</span>
+          </div>
+
+          <div id='Legend0to10Icon' class='PopFallLegendSquare tooltip'>
+            <span class="tooltiptext">0 to 10%</span>
+          </div>
+
+          <div id='LegendPopRiseIcon' class='PopFallLegendSquare tooltip'>
+            <span class="tooltiptext">Population Rise</span>
+          </div>
+
         </div>
         <div id="postFamineIrelandLegendText">
           <p id="LegendOver30Text">Over 30%</p>
