added preFamineIreland text with js

--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
             food source. Then, disaster struck. From 1845 to 1852, the potato blight
             disease ravaged the majority of Irish potato crop, leading to the Irish
             Potato Famine. Over a million Irish citizens starved to death, and 2 million more left their
-            homes behind. Click on the map to watch the Irish Potato Famine befall Ireland.
+            homes behind.
           </p>
+          <div id="preFamineIrelandText">
+            <h3 id="irelandPoph3" class="irelandMapText">Ireland Pre-1845</h3>
+            <p id="irelandPopp" class="irelandMapText">Click on Ireland to see its population changes during the potato famine.
+            </p>
+          </div>
           <div id="postFamineIrelandText">
-            <h3 id="irelandPopFallh3">Ireland Population Fall 1845-1852</h3>
-            <p id="irelandPopFallp">
-              Hover over the legend to display what each color indicates.
+            <h3 id="irelandPopFallh3" class="irelandMapText">Ireland Population Fall 1845-1852</h3>
+            <p id="irelandPopFallp" class="irelandMapText">
+              Hover over the legend to display what percentage of Ireland's population decreased per region.
             </p>
           </div>
 
           <img id="preFamineIrelandImg" src="img/preFamineIreland.jpg" alt="Map of Ireland"/>
           <img id="postFamineIrelandImg" class='postFamineIreland' src="img/postFamineIreland.png" alt="Population Fall in Ireland 1841-1851"/>
-          <!-- <img id="man1" src="img/man1.png" alt="person icon" />
-        <img id="man2" src="img/man2.png" alt="person icon" />
-        <img id="man3" src="img/man3.png" alt="person icon" />
-        <img id="man4" src="img/man4.png" alt="person icon" />
-        <img id="man5" src="img/man5.png" alt="person icon" />
-        <img id="man6" src="img/man6.png" alt="person icon" /> -->
+
           <div id="postFamineIrelandLegendIcons">
             <div id='LegendOver30Icon' class='PopFallLegendSquare tooltip'>
               <span class="tooltiptext">Over 30%</span>
