added plant quiz to europe slide

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
             they used potatoes as decorative garden plants. More than 200 years would
             pass before the potato caught on as a major food source in Europe. Though even
             then, it was predominantly eaten by the lower classes.</p>
-
+          <div id="plantQuiz"></div>
+          <img id="belladonna-plant" src="img/belladonna.jpg" alt="belladonna plant"/>
+          <img id="potato-plant" src="img/potato-plant.jpg" alt="potato plant"/>
+          <button id="plantQuizSubmit">Submit</button>
+          <div id="plantQuizResults"></div>
         </div>
 
 
