added background to europe slide

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       </div>
 
-        <div id='Europe-slide'>
+        <div id='europe-slide'>
           <h3>1536: Potatoes travel to Europe</h3>
           <p>
             Considering how vital they were to the Incan people, when Spanish sailors
