--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
-  <link href="css/slickQuiz.css" media="screen" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
@@ -77,127 +76,126 @@
             famines of the time, and so their populations steadily grew.
             As a result, the British, Dutch, and German empires rose on the backs of the
             growing groups of farmers, laborers, and soldiers, thus lifting the
-            West to its place of world dominian.
+            West to its place of world dominian. Hover over the dots on the line graph to see the growth rates of various European countries.
           </p>
-          <p>
-            Drag and drop the potatoes onto the peasants' table to make their population grow.
-          </p>
-          <div id="table" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-          <br>
-          <img id="drag1" src="img/drag-potatoes.png" draggable="true" ondragstart="drag(event)" alt="potatoes icon">
-          <div id="peasantsGroup">
-            <img src="img/peasant.png" alt="peasant icon"/>
-          </div>
-          </div>
-
-          <div id='irish-slide'>
-            <h3>1845-1852: Irish Potato Famine</h3>
-            <p>
-              However, not all European countries
-              sprouted empires. After the Irish adopted the potato, their population
-              dramatically increased, as did their dependence on the potato as a major
-              food source. Then, disaster struck. From 1845 to 1852, the potato blight
-              disease ravaged the majority of Irish potato crop, leading to the Irish
-              Potato Famine. Over a million Irish citizens starved to death, and 2 million more left their
-              homes behind.
-            </p>
-            <div id="preFamineIrelandText">
-              <h3 id="irelandPoph3" class="irelandMapText">Ireland Pre-1845</h3>
-              <p id="irelandPopp" class="irelandMapText">Click on Ireland to see its population changes during the potato famine.
-              </p>
-            </div>
-            <div id="postFamineIrelandText">
-              <h3 id="irelandPopFallh3" class="irelandMapText">Ireland Population Fall 1845-1852</h3>
-              <p id="irelandPopFallp" class="irelandMapText">
-                Hover over the legend to display what percentage of Ireland's population decreased per region.
-              </p>
-            </div>
-
-            <img id="preFamineIrelandImg" src="img/preFamineIreland.jpg" alt="Map of Ireland"/>
-            <img id="postFamineIrelandImg" class='postFamineIreland' src="img/postFamineIreland.png" alt="Population Fall in Ireland 1841-1851"/>
-
-            <div id="postFamineIrelandLegendIcons">
-              <div id='LegendOver30Icon' class='PopFallLegendSquare tooltip'>
-                <span class="tooltiptext">Over 30%</span>
-              </div>
-
-              <div id='Legend20to30Icon' class='PopFallLegendSquare tooltip'>
-                <span class="tooltiptext">20 to 30%</span>
-              </div>
-
-              <div id='Legend10to20Icon' class='PopFallLegendSquare tooltip'>
-                <span class="tooltiptext">10 to 20%</span>
-              </div>
-
-              <div id='Legend0to10Icon' class='PopFallLegendSquare tooltip'>
-                <span class="tooltiptext">0 to 10%</span>
-              </div>
-
-              <div id='LegendPopRiseIcon' class='PopFallLegendSquare tooltip'>
-                <span class="tooltiptext">Population Rise</span>
-              </div>
-
-            </div>
-            <div id="postFamineIrelandLegendText">
-              <p id="LegendOver30Text">Over 30%</p>
-              <p id="Legend20to30Text">20 to 30%</p>
-              <p id="Legend10to20Text">10 to 20%</p>
-              <p id='Legend0to10Text'>0 to 10%</p>
-              <p id='LegendPopRiseText'>Population rise</p>
-            </div>
-          </div>
-
-          <div id='ind-rev-slide'>
-            <h3>1850s: Industrial Revolution</h3>
-            <p>
-              This wasn't the end for the potato. The crop eventually
-              recovered, and Europe's population, especially the working classes,
-              continued to increase. Aided by the influx of Irish migrants, Europe
-              now had a large, sustainable, and well-fed population that was capable
-              of manning the emerging factories that would bring about our modern world
-              via the Industrial Revoluation. Click on the Irish to make them migrate!
-            </p>
-          </div>
-
-          <div id="slickQuiz">
-            <h1 class="quizName"></h1>
-            <div class="quizArea">
-              <div class="quizHeader">
-                <a class="startQuiz" href="">Get Started!</a>
-              </div>
-            </div>
-            <div class="quizResults">
-              <h3 class="quizScore">You Scored: <span></span></h3>
-              <h3 class="quizLevel"><strong>Ranking:</strong> <span></span></h3>
-              <div class="quizResultsCopy"></div>
-            </div>
-          </div>
-
-          <div class='sources-slide'>
-            <h3>Sources</h3>
-            <ul>
-              <li>
-                https://link.springer.com/article/10.1007/BF00029633
-              </li>
-              <li>
-                https://garden.org/learn/articles/view/559/
-              </li>
-              <li>
-                https://www.washingtonpost.com/history/2018/10/08/christopher-columbus-potato-that-changed-world/?noredirect=on&utm_term=.f4b5fd7954f7
-              </li>
-              <li>
-                http://www.newworldencyclopedia.org/entry/File:Irish_population_change_(1841-1851).png
-            </ul>
+          <div id="chartContainer" style="height: 300px; width: 100%;">
           </div>
         </div>
-      </div>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-      <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
-      <script src="js/maps.js"></script>
-      <script src="js/slickQuiz.js"></script>
-      <script src="js/scripts.js"></script>
+        <div id='irish-slide'>
+          <h3>1845-1852: Irish Potato Famine</h3>
+          <p>
+            However, not all European countries
+            sprouted empires. After the Irish adopted the potato, their population
+            dramatically increased, as did their dependence on the potato as a major
+            food source. Then, disaster struck. From 1845 to 1852, the potato blight
+            disease ravaged the majority of Irish potato crop, leading to the Irish
+            Potato Famine. Over a million Irish citizens starved to death, and 2 million more left their
+            homes behind.
+          </p>
+          <div id="preFamineIrelandText">
+            <h3 id="irelandPoph3" class="irelandMapText">Ireland Pre-1845</h3>
+            <p id="irelandPopp" class="irelandMapText">Click on Ireland to see its population changes during the potato famine.
+            </p>
+          </div>
+          <div id="postFamineIrelandText">
+            <h3 id="irelandPopFallh3" class="irelandMapText">Ireland Population Fall 1845-1852</h3>
+            <p id="irelandPopFallp" class="irelandMapText">
+              Hover over the legend to display what percentage of Ireland's population decreased per region.
+            </p>
+          </div>
+
+          <img id="preFamineIrelandImg" src="img/preFamineIreland.jpg" alt="Map of Ireland"/>
+          <img id="postFamineIrelandImg" class='postFamineIreland' src="img/postFamineIreland.png" alt="Population Fall in Ireland 1841-1851"/>
+
+          <div id="postFamineIrelandLegendIcons">
+            <div id='LegendOver30Icon' class='PopFallLegendSquare tooltip'>
+              <span class="tooltiptext">Over 30%</span>
+            </div>
+
+            <div id='Legend20to30Icon' class='PopFallLegendSquare tooltip'>
+              <span class="tooltiptext">20 to 30%</span>
+            </div>
+
+            <div id='Legend10to20Icon' class='PopFallLegendSquare tooltip'>
+              <span class="tooltiptext">10 to 20%</span>
+            </div>
+
+            <div id='Legend0to10Icon' class='PopFallLegendSquare tooltip'>
+              <span class="tooltiptext">0 to 10%</span>
+            </div>
+
+            <div id='LegendPopRiseIcon' class='PopFallLegendSquare tooltip'>
+              <span class="tooltiptext">Population Rise</span>
+            </div>
+
+          </div>
+          <div id="postFamineIrelandLegendText">
+            <p id="LegendOver30Text">Over 30%</p>
+            <p id="Legend20to30Text">20 to 30%</p>
+            <p id="Legend10to20Text">10 to 20%</p>
+            <p id='Legend0to10Text'>0 to 10%</p>
+            <p id='LegendPopRiseText'>Population rise</p>
+          </div>
+        </div>
+
+        <div id='ind-rev-slide'>
+          <h3>1850s: Industrial Revolution</h3>
+          <p>
+            This wasn't the end for the potato. The crop eventually
+            recovered, and Europe's population, especially the working classes,
+            continued to increase. Aided by the influx of Irish migrants, Europe
+            now had a large, sustainable, and well-fed population that was capable
+            of manning the emerging factories that would bring about our modern world
+            via the Industrial Revoluation.
+
+          </p>
+        </div>
+
+        <div id="slickQuiz">
+          <h2 class="quizName"></h2>
+          <div class="quizArea">
+            <div class="quizHeader">
+              <a class="startQuiz" href="">Get Started!</a>
+            </div>
+          </div>
+          <div class="quizResults">
+            <h3 class="quizScore">You Scored: <span></span></h3>
+            <h3 class="quizLevel"><strong>Ranking:</strong> <span></span></h3>
+            <div class="quizResultsCopy"></div>
+          </div>
+        </div>
+
+        <div class='sources-slide'>
+          <h3>Sources</h3>
+          <ul>
+            <li>
+              https://link.springer.com/article/10.1007/BF00029633
+            </li>
+            <li>
+              https://garden.org/learn/articles/view/559/
+            </li>
+            <li>
+              https://www.washingtonpost.com/history/2018/10/08/christopher-columbus-potato-that-changed-world/?noredirect=on&utm_term=.f4b5fd7954f7
+            </li>
+            <li>
+              http://www.newworldencyclopedia.org/entry/File:Irish_population_change_(1841-1851).png
+            </li>
+            <li>
+              Durand, 1967; Mitchell, 1998; United Nations, 2000; McEvedy and Jones, 1978; Livi-Bacci, 1992.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
+    <script type="text/javascript" src="js/maps.js"></script>
+    <script type="text/javascript" src="js/jquery.canvasjs.min.js"></script>
+    <script type="text/javascript" src="js/slickQuiz.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 
 
 </body>
