--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             famines of the time, and so their populations steadily grew.
             As a result, the British, Dutch, and German empires rose on the backs of the
             growing groups of farmers, laborers, and soldiers, thus lifting the
-            West to its place of world dominian.
+            West to its place of world dominian. Hover over the lien graph points to view population growth rates. Hover over the legend to see the country each color indicates.
           </p>
           <div id="lineGraph" style="height: 200px; width: 100%;">
           </div>
-          <div id="CountryIcons">
+          <div id="countryIcons">
             <div id='EuropeIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Growth Rates Europe (without Russia)</span>
             </div>
@@ -102,13 +102,7 @@
             </div>
 
           </div>
-          <div id="CountryLegendText">
-            <p id="EuropeText">Growth Rates Europe (without Russia)</p>
-            <p id="EnglandWalesText">Growth Rates England and Wales</p>
-            <p id="GermanyText">Growth Rates Germany</p>
-            <p id='FranceText'>Growth Rates France</p>
-            <p id='NetherlandsText'>Growth Rates The Netherlands</p>
-          </div>
+
         </div>
 
         <div id='irish-slide'>
