--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <body>
   <div class='container'>
     <div class='single-item'>
-
       <div id='title-slide'>
-
         <h1>The History of the Potato</h1>
         <p>
           Baked or fried, boiled or roasted, as chips or fries. At some point in your life, you've probably eaten a potato. It's delicious, for sure! However, potatoes have played much more a significant role in our history than just that of a
@@ -36,7 +34,6 @@
       </div>
 
       <div id="inca-slide">
-
         <h3>Incans Thrived on Potatoes</h3>
         <p class='transparent'>
           Containing high proteins and carbohydrates, as well as essential fats, vitamins, and minerals,
@@ -47,7 +44,7 @@
         <img id='growing-potato2' class='incan-potato' src='img/growing-potato.png' alt='potato clip art' />
         <img id='growing-potato3' class='incan-potato' src='img/growing-potato.png' alt='potato clip art' />
         <img id='growing-potato4' class='incan-potato' src='img/growing-potato.png' alt='potato clip art' />
-        </div>
+    </div>
 
         <div id='europe-slide'>
           <h3>1536: Potatoes travel to Europe</h3>
@@ -67,7 +64,6 @@
           <div id="plantQuizResults"></div>
         </div>
 
-
         <div id='peasant-slide'>
           <h3>1750s: Sprouting empires</h3>
           <p>
@@ -78,31 +74,25 @@
             growing groups of farmers, laborers, and soldiers, thus lifting the
             West to its place of world dominian. Hover over the lien graph points to view population growth rates. Hover over the legend to see the country each color indicates.
           </p>
-          <div id="lineGraph" style="height: 200px; width: 100%;">
+          <div id="lineGraph" style="height: 250px; width: 100%;">
           </div>
           <div id="countryIcons">
-            <div id='EuropeIcon' class='LegendSquare tooltip'>
-              <span class="tooltiptext">Growth Rates Europe (without Russia)</span>
-            </div>
-
             <div id='EnglandWalesIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Growth Rates England and Wales</span>
             </div>
-
             <div id='GermanyIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Growth Rates Germany</span>
             </div>
-
+            <div id='EuropeIcon' class='LegendSquare tooltip'>
+              <span class="tooltiptext">Growth Rates Europe (without Russia)</span>
+            </div>
             <div id='FranceIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Growth Rates France</span>
             </div>
-
             <div id='NetherlandsIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Growth Rates The Netherlands</span>
             </div>
-
           </div>
-
         </div>
 
         <div id='irish-slide'>
@@ -110,8 +100,7 @@
           <p>
             However, not all European countries
             sprouted empires. After the Irish adopted the potato, their population
-            dramatically increased, as did their dependence on the potato as a major
-            food source. Then, disaster struck. From 1845 to 1852, the potato blight
+            dramatically increased, as did their dependence on the potato. Then, disaster struck. From 1845 to 1852, the potato blight
             disease ravaged the majority of Irish potato crop, leading to the Irish
             Potato Famine. Over a million Irish citizens starved to death, and 2 million more left their
             homes behind.
@@ -127,31 +116,24 @@
               Hover over the legend to display what percentage of Ireland's population decreased per region.
             </p>
           </div>
-
           <img id="preFamineIrelandImg" src="img/preFamineIreland.png" alt="Map of Ireland"/>
           <img id="postFamineIrelandImg" class='postFamineIreland' src="img/postFamineIreland.png" alt="Population Fall in Ireland 1841-1851"/>
-
           <div id="postFamineIrelandLegendIcons">
             <div id='LegendOver30Icon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Over 30%</span>
             </div>
-
             <div id='Legend20to30Icon' class='LegendSquare tooltip'>
               <span class="tooltiptext">20 to 30%</span>
             </div>
-
             <div id='Legend10to20Icon' class='LegendSquare tooltip'>
               <span class="tooltiptext">10 to 20%</span>
             </div>
-
             <div id='Legend0to10Icon' class='LegendSquare tooltip'>
               <span class="tooltiptext">0 to 10%</span>
             </div>
-
             <div id='LegendPopRiseIcon' class='LegendSquare tooltip'>
               <span class="tooltiptext">Population Rise</span>
             </div>
-
           </div>
           <div id="postFamineIrelandLegendText">
             <p id="LegendOver30Text">Over 30%</p>
@@ -171,7 +153,6 @@
             now had a large, sustainable, and well-fed population that was capable
             of manning the emerging factories that would bring about our modern world
             via the Industrial Revoluation.
-
           </p>
         </div>
 
@@ -219,7 +200,6 @@
     <script type="text/javascript" src="js/jquery.canvasjs.min.js"></script>
     <script type="text/javascript" src="js/slickQuiz.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-
 
 </body>
 
